[gd_scene load_steps=26 format=2]

[ext_resource path="res://resources/data/regions_data/region_2.tres" type="Resource" id=3]
[ext_resource path="res://resources/data/regions_data/region_1.tres" type="Resource" id=4]
[ext_resource path="res://resources/styles/new_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/icons collection .png" type="Texture" id=6]
[ext_resource path="res://scripts/Main.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/coinIcon.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/BG.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/borderCircle.png" type="Texture" id=12]
[ext_resource path="res://resources/styles/panel_2.tres" type="StyleBox" id=13]
[ext_resource path="res://assets/ui/closeBtn.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/roundEdgeRect.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/greenRectTapped.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/greyRectNormal.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/greenRectNormal.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/yellowRectNormal.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/yellowRectTapped.png" type="Texture" id=21]
[ext_resource path="res://actors/ui/RegionDisplay.tscn" type="PackedScene" id=24]

[sub_resource type="StyleBoxTexture" id=5]
content_margin_top = 1.0
content_margin_bottom = 1.0
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 256, 64 )
margin_left = 40.0
margin_right = 36.0
margin_top = 30.0
margin_bottom = 34.0
modulate_color = Color( 1, 0.894118, 0.490196, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
VScrollBar/styles/scroll = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2000, 2730, 170, 170 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1590, 2740, 140, 150 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 52.0
bg_color = Color( 0.894118, 0.894118, 0.894118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Back" type="TextureRect" parent="."]
modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ManagersControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/ManagersControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 135.0
margin_right = -21.0
margin_bottom = -135.0
custom_styles/panel = ExtResource( 13 )

[node name="Close" type="TextureButton" parent="CanvasLayer/ManagersControl/Panel"]
self_modulate = Color( 1, 0.415686, 0.415686, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 55.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ManagersControl/Panel/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -18.0
margin_bottom = -18.0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/ManagersControl/Panel"]
anchor_right = 1.0
margin_left = 43.0
margin_top = 57.0
margin_right = -43.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.054902, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Hire Managers"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ManagersControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 136.0
margin_right = -27.0
margin_bottom = -43.0
theme = SubResource( 4 )

[node name="ManagersList" type="VBoxContainer" parent="CanvasLayer/ManagersControl/Panel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 624.0
size_flags_horizontal = 3
custom_constants/separation = 32

[node name="RegionsControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/RegionsControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 167.0
margin_right = -24.0
margin_bottom = -175.0
custom_styles/panel = ExtResource( 13 )

[node name="Close" type="TextureButton" parent="CanvasLayer/RegionsControl/Panel"]
self_modulate = Color( 1, 0.415686, 0.415686, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 55.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RegionsControl/Panel/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -18.0
margin_bottom = -18.0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/RegionsControl/Panel"]
anchor_right = 1.0
margin_left = 43.0
margin_top = 57.0
margin_right = -43.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.054902, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Regions"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/RegionsControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 136.0
margin_right = -17.0
margin_bottom = -43.0
theme = SubResource( 4 )
custom_styles/bg = SubResource( 6 )
scroll_horizontal_enabled = false

[node name="RegionsList" type="GridContainer" parent="CanvasLayer/RegionsControl/Panel/ScrollContainer"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3

[node name="Panel" parent="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList" instance=ExtResource( 24 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 3
region_data = ExtResource( 4 )

[node name="TextureRect" parent="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList/Panel" index="0"]
texture = SubResource( 7 )

[node name="RegionDisplay" parent="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList" instance=ExtResource( 24 )]
margin_left = 144.0
margin_right = 272.0
margin_bottom = 128.0
region_data = ExtResource( 3 )

[node name="TextureRect" parent="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList/RegionDisplay" index="0"]
texture = SubResource( 8 )

[node name="OfflineRewardsControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/OfflineRewardsControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 205.0
margin_right = -38.0
margin_bottom = -205.0
custom_styles/panel = ExtResource( 13 )

[node name="Close" type="TextureButton" parent="CanvasLayer/OfflineRewardsControl/Panel"]
self_modulate = Color( 1, 0.415686, 0.415686, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 55.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OfflineRewardsControl/Panel/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -18.0
margin_bottom = -18.0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/OfflineRewardsControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 67.0
margin_right = -25.0
margin_bottom = -41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "dsfsdf"
align = 1
valign = 1
autowrap = true

[node name="UpgradesControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradesControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_top = 137.0
margin_right = -33.0
margin_bottom = -137.0
custom_styles/panel = ExtResource( 13 )

[node name="Label" type="Label" parent="CanvasLayer/UpgradesControl/Panel"]
anchor_right = 1.0
margin_left = 43.0
margin_top = 57.0
margin_right = -43.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.054902, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Upgrades"
align = 1
valign = 1

[node name="Close" type="TextureButton" parent="CanvasLayer/UpgradesControl/Panel"]
self_modulate = Color( 1, 0.415686, 0.415686, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 55.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UpgradesControl/Panel/Close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -18.0
margin_bottom = -18.0
texture = ExtResource( 14 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UpgradesControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 136.0
margin_right = -27.0
margin_bottom = -43.0
theme = SubResource( 4 )

[node name="UpgradesList" type="VBoxContainer" parent="CanvasLayer/UpgradesControl/Panel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 600.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 13.0
margin_right = -9.0
margin_bottom = -19.0
custom_constants/separation = 32

[node name="HUD" type="Panel" parent="VBoxContainer"]
margin_right = 702.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 90 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -152.0

[node name="Gold" type="Label" parent="VBoxContainer/HUD/HBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 520.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.411765, 0.411765, 0.411765, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "$456456464"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HUD/HBoxContainer/Gold"]
margin_left = -13.0
margin_right = 57.0
margin_bottom = 50.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 702.0
margin_bottom = 1392.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )

[node name="ShopCategoryBase" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 702.0
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1424.0
margin_right = 702.0
margin_bottom = 1488.0
size_flags_horizontal = 3

[node name="Managers" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 231.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
expand = true

[node name="PriceLabel" type="Label" parent="VBoxContainer/HBoxContainer/Managers"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Managers"
align = 1
valign = 1

[node name="Upgrades" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 235.0
margin_right = 466.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
expand = true

[node name="PriceLabel" type="Label" parent="VBoxContainer/HBoxContainer/Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Upgrades"
align = 1
valign = 1

[node name="Regions" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 470.0
margin_right = 702.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 18 )
expand = true

[node name="PriceLabel" type="Label" parent="VBoxContainer/HBoxContainer/Regions"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Regions"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="CanvasLayer/ManagersControl/Panel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="CanvasLayer/RegionsControl/Panel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="CanvasLayer/OfflineRewardsControl/Panel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradesControl/Panel/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Managers" to="." method="_on_Managers_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Upgrades" to="." method="_on_Upgrades_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Regions" to="." method="_on_Regions_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList/Panel"]
[editable path="CanvasLayer/RegionsControl/Panel/ScrollContainer/RegionsList/RegionDisplay"]
